--- a/bar/index.html
+++ b/bar/index.html
@@ -11,7 +11,5 @@
 		<meta name='apple-mobile-web-app-capable' content='yes'>
 		<script src="web.js" charset="utf-8"></script>
 	</head>
-	<body mol_view_root>
-		<div mol_view_root="$hd_space_bar"></div>
-	</body>
+	<body mol_view_root="$hd_space_bar"></body>
 </html>
