--- a/bar/index.html
+++ b/bar/index.html
@@ -6,10 +6,10 @@
 		<meta name="viewport" content="width=device-width, height=device-height, initial-scale=1">
 		<meta name="mobile-web-app-capable" content="yes">
 		<meta name="apple-mobile-web-app-capable" content="yes">
-		<link href="hd/space/logo/logo.svg" rel="icon" /> 
+		<link href="gd/web/logo/logo.svg" rel="icon" /> 
 		<meta name='mobile-web-app-capable' content='yes'>
 		<meta name='apple-mobile-web-app-capable' content='yes'>
 		<script src="web.js" charset="utf-8"></script>
 	</head>
-	<body mol_view_root="$hd_space_bar"></body>
+	<body mol_view_root="$gd_web_bar"></body>
 </html>
