--- a/bar/index.html
+++ b/bar/index.html
@@ -2,7 +2,7 @@
 <html mol_view_root>
 	<head>
 		<meta charset="utf-8" />
-		<title>Hyper Space</title>
+		<title>Giper Space</title>
 		<meta name="viewport" content="width=device-width, height=device-height, initial-scale=1">
 		<meta name="mobile-web-app-capable" content="yes">
 		<meta name="apple-mobile-web-app-capable" content="yes">
